--- a/website/style.css
+++ b/website/style.css
@@ -76,9 +76,8 @@ hr {
 
 .items {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 100%;
-  gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 15px;
 }
 
 .item {
