--- a/website/style.css
+++ b/website/style.css
@@ -76,7 +76,7 @@ hr {
 
 .items {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 15px;
 }
 
