--- a/website/style.css
+++ b/website/style.css
@@ -75,6 +75,7 @@ hr {
 
 
 .items {
+  max-width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 15px;
