--- a/website/style.css
+++ b/website/style.css
@@ -26,9 +26,10 @@
 body {
   font-family: 'Lucida Console', monospace;
   font-size: 18px;
-  color: #111;
+  color: #000000;
   background-color: white;
   max-width: 1280px;
+  width: 100vw;
   margin: 0 auto;
   padding: 0 50px;
   box-sizing: border-box;
