--- a/website/style.css
+++ b/website/style.css
@@ -29,7 +29,8 @@ body {
   color: #000000;
   background-color: white;
   max-width: 1280px;
-  width: 100vw;
+  width: 100%;
+  position: fixed;
   margin: 0 auto;
   padding: 0 50px;
   box-sizing: border-box;
