--- a/website/style.css
+++ b/website/style.css
@@ -1,4 +1,4 @@
-/* @media (prefers-color-scheme: light) { */
+/* @media (prefers-color-scheme: light) { 
 .dark-mode {
   visibility: hidden;
   display: none;
@@ -8,9 +8,9 @@
   display: inline-block;
 }
 
-/* } */
+ } 
 
-/*
+
 @media (prefers-color-scheme: dark) {
   .dark-mode {
     visibility: hidden;
@@ -55,6 +55,7 @@ body {
 .logo {
   width: 100%;
   max-width: 400px;
+  display: inline-block;
 }
 
 .links {
