--- a/website/style.css
+++ b/website/style.css
@@ -76,7 +76,7 @@ hr {
   margin: 30px auto;
 }
 
-
+/*
 .items {
   max-width: 100%;
   display: grid;
@@ -91,3 +91,4 @@ hr {
   border: solid #d3d3d3;
   border-radius: 20px;
 }
+*/
