--- a/website/style.css
+++ b/website/style.css
@@ -22,7 +22,7 @@
   }
 }
 */
-/*
+
 body {
   font-family: 'Lucida Console', monospace;
   font-size: 18px;
@@ -79,17 +79,19 @@ hr {
 
 .items {
   max-width: 100%;
+  /*
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 15px;
+*/
 }
 
 .item {
+  /*
   display: flex;
   flex-direction: column;
   padding: 20px;
   border: solid #d3d3d3;
   border-radius: 20px;
-}
-
 */
+}
