--- a/website/style.css
+++ b/website/style.css
@@ -49,14 +49,11 @@ hr {
   margin: 30px auto;
 }
 
-/*
 .items {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 400px;
-  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
-*/
+
 .item {
   display: flex;
   flex-direction: column;
