Test: change class name

--- a/website/style.css
+++ b/website/style.css
@@ -49,9 +49,9 @@ hr {
   margin: 30px auto;
 }
 
-.items {
-  display: flex;
-  flex-direction: column;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .item {
