Fix: ok i am done now, waitiing for a bit until it updates

--- a/website/style.css
+++ b/website/style.css
@@ -49,9 +49,10 @@ hr {
   margin: 30px auto;
 }
 
-.grid {
+.item-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 15px;
 }
 
 .item {
