--- a/website/style.css
+++ b/website/style.css
@@ -1,3 +1,25 @@
+@media (prefers-color-scheme: light) {
+  .dark-mode {
+    display: inline-block;
+  }
+
+  .light-mode {
+    visibility: hidden;
+    display: none;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark-mode {
+    visibility: hidden;
+    display: none;
+  }
+
+  .light-mode {
+    display: inline-block;
+  }
+}
+
 body {
   font-family: 'Lucida Console', monospace;
   font-size: 18px;
@@ -28,7 +50,6 @@ body {
 .logo {
   width: 100%;
   max-width: 400px;
-  display: inline-block;
 }
 
 .links {
