--- a/website/style.css
+++ b/website/style.css
@@ -1,16 +1,16 @@
+/*@media (prefers-color-scheme: dark) {
+  .dark-mode {
+    display: inline-block;
+  }
+
+  .light-mode {
+    visibility: hidden;
+    display: none;
+  }
+}
+
 @media (prefers-color-scheme: light) {
   .dark-mode {
-    display: inline-block;
-  }
-
-  .light-mode {
-    visibility: hidden;
-    display: none;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .dark-mode {
     visibility: hidden;
     display: none;
   }
@@ -20,6 +20,7 @@
   }
 }
 
+*/
 body {
   font-family: 'Lucida Console', monospace;
   font-size: 18px;
@@ -50,6 +51,7 @@ body {
 .logo {
   width: 100%;
   max-width: 400px;
+  display: inline-block;
 }
 
 .links {
