--- a/website/style.css
+++ b/website/style.css
@@ -1,17 +1,31 @@
-/*@media (prefers-color-scheme: dark) {
+:root {
+  --white: #dce0e8;
+  --black: #11111b;
+  --grey: #8c8fa1;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: var(--white);
+    background-color: var(--black);
+  }
+
   .dark-mode {
     display: inline-block;
   }
 
   .light-mode {
-    visibility: hidden;
     display: none;
   }
 }
 
 @media (prefers-color-scheme: light) {
+  body {
+    color: var(--black);
+    background-color: var(--white);
+  }
+
   .dark-mode {
-    visibility: hidden;
     display: none;
   }
 
@@ -20,12 +34,10 @@
   }
 }
 
-*/
+
 body {
   font-family: 'Lucida Console', monospace;
   font-size: 18px;
-  color: #000000;
-  background-color: white;
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 50px;
@@ -51,7 +63,6 @@ body {
 .logo {
   width: 100%;
   max-width: 400px;
-  display: inline-block;
 }
 
 .links {
@@ -67,7 +78,7 @@ a {
 hr {
   border: none;
   height: 2px;
-  background-color: lightgrey;
+  background-color: var(--grey);
   width: 100%;
   margin: 30px auto;
 }
@@ -83,6 +94,6 @@ hr {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  border: solid #d3d3d3;
+  border: solid var(--grey);
   border-radius: 20px;
 }
