--- a/website/style.css
+++ b/website/style.css
@@ -44,14 +44,18 @@ body {
 
 header {
   background-color: var(--green);
-  color: white;
+  color: var(--white);
   font-size: 16px;
   height: 20px;
-  width: 100vw;
+  width: 100%;
   position: fixed;
   bottom: 0;
   right: 0;
   left: 0;
+}
+
+header a:hover {
+  text-decoration: none;
 }
 
 main {
@@ -66,30 +70,44 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 20px);
+  max-height: calc(100vh - 20px);
   text-align: center;
+  margin: 0;
+  font-size: 24px;
 }
 
 .command {
   width: 100%;
   max-width: 400px;
-  display: inline-block;
+  font-size: 17px;
+  display: inline;
   text-align: left;
 }
+
+.contact {
+  width: 100%;
+  max-width: 400px;
+  display: inline-block;
+  text-align: left;
+  font-size: 18px;
+  margin: 0;
+}
+
 
 .logo {
   width: 100%;
   max-width: 400px;
-}
-
-.links {
-  font-size: 24px;
-  margin: 20px;
+  margin-bottom: 20px;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 hr {
