--- a/website/style.css
+++ b/website/style.css
@@ -5,6 +5,7 @@
   --dark-black: #11111b;
   --grey: #8c8fa1;
   --green: #5a931b;
+  --links: #235e70;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -38,7 +39,7 @@
 }
 
 body {
-  font-family: 'Lucida Console', monospace;
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
   font-size: 18px;
 }
 
@@ -54,9 +55,31 @@ header {
   left: 0;
 }
 
-header a:hover {
-  font-weight: normal;
+a {
+  color: var(--links);
+}
+
+a:hover {
+  color: var(--links);
+}
+
+a:visited {
+  color: var(--links);
+}
+
+header a {
   text-decoration: none;
+  color: var(--white);
+}
+
+header a:hover {
+  text-decoration: none;
+  color: var(--white);
+}
+
+header a:visited {
+  text-decoration: none;
+  color: var(--white);
 }
 
 main {
@@ -79,6 +102,7 @@ main {
 }
 
 .command {
+  font-family: 'Lucida Console', monospace;
   width: 100%;
   max-width: 400px;
   font-size: 17px;
@@ -102,16 +126,6 @@ main {
   margin-bottom: 20px;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-a:hover {
-  font-weight: bold;
-  text-decoration: none;
-}
-
 hr {
   border: none;
   height: 2px;
@@ -128,9 +142,23 @@ hr {
 }
 
 .item {
+  text-decoration: none;
+  color: inherit;
   display: flex;
   flex-direction: column;
   padding: 20px;
+  margin: 2px;
   border: solid var(--grey);
   border-radius: 20px;
+}
+
+
+.item-grid a:hover {
+  color: inherit;
+  border-width: 3px;
+  margin: 0;
+}
+
+.item-grid a:visited {
+  color: inherit;
 }
